--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -21,6 +21,7 @@
       background: url("{{ url_for('C:\Users\imaba\Downloads\man-giving-red-ornament-heart-woman.jpg', filename='images/blood-donation-bg.jpg') }}") no-repeat center center fixed;
       background-size: cover;
       position: relative;
+      background-image: url("man-giving-red-ornament-heart-woman.jpg");
     }
 
     body::before {
